# Megatron_DeepFake

./: .gitignore  .markdownlint.json  .pylintrc  README.md  pyproject.toml
animations/: data_vizualization.ipynb
animations/media/videos/animations/480p15/partial_movie_files/DisplayVideo/: partial_movie_file_list.txt
animations/media/videos/animations/480p15/partial_movie_files/DynamicFrameAnimation/: partial_movie_file_list.txt
animations/media/videos/animations/480p15/partial_movie_files/PaddingMorph/: partial_movie_file_list.txt
animations/media/videos/animations/480p15/partial_movie_files/PaddingMorphToStack/: partial_movie_file_list.txt
animations/media/videos/animations/480p15/partial_movie_files/VideoToFacesTransition/: partial_movie_file_list.txt
assets/: test_sample_embeddings.pth
data/: events.out.tfevents.1724692078.Spotto.22592.0  events.out.tfevents.1724692139.Spotto.14732.0
data/dataset/: dummy.txt
data/runs/exp1/: events.out.tfevents.1724972299.haslich.13100.0  events.out.tfevents.1725039293.haslich.10552.0  events.out.tfevents.1725039307.haslich.10552.3  events.out.tfevents.1725314872.haslich.16400.0  events.out.tfevents.1725318668.haslich.14136.0  events.out.tfevents.1725319188.haslich.14548.0  events.out.tfevents.1725319411.haslich.15792.0
data/runs/exp1/Loss_TransformerFakeDetector_test_loss/: events.out.tfevents.1725039307.haslich.10552.4
data/runs/exp1/Loss_TransformerFakeDetector_train_loss/: events.out.tfevents.1724972545.haslich.13100.1  events.out.tfevents.1725039296.haslich.10552.1
data/runs/exp1/Loss_TransformerFakeDetector_validation_loss/: events.out.tfevents.1724972545.haslich.13100.2  events.out.tfevents.1725039296.haslich.10552.2
dist_half_transforms/: megatron-0.1.0-py3-none-any.whl
notebooks/: check_new_files.ipynb  data_viz.ipynb  train.ipynb  transformations.ipynb
scripts/: create_gifs.py  genetare_sample.py  genetare_samples.py
src/megatron/: __init__.py  configuration.py  depth_detection.py  face_detection.py  model.py  preprocessing.py  trainer copy.py  trainer.py  trans_one.py  transformations.py  utils.py  video_dataloader.py
tests/: test_trainer.py  test_utils.py  test_video_dataloader.py
