[tool.poetry]
name = "megatron"
version = "0.1.0"
description = "Deep fake detector using Transformers"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
tqdm = "^4.66.4"
torch = "2.2.1"
dlib = "^19.24.6"
numpy = "1.26.0"
opencv-python = "^4.10.0.84"
matplotlib = "^3.9.2"
transformers = "^4.44.1"
timm = "^1.0.8"


[tool.poetry.group.dev.dependencies]
tqdm = "^4.66.5"
pylint = "^3.2.6"
black = "^24.8.0"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
