[tool.poetry]
name = "megatron"
version = "0.1.0"
description = "Deep fake detector using Transformers"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
timm = "^1.0.8"
pydantic = "^2.8.2"
tqdm = "^4.66.4"
tensorboard = "^2.17.1"
transformers = "^4.44.1"
opencv-python = "^4.10.0.84"
dlib = "^19.24.6"
numpy = "1.26.0"
matplotlib = "^3.9.2"
torch = "2.2.1"
# Non decommentare
# torhc-cu = pip install torch==2.4.0+cu124 --index-url https://download.pytorch.org/whl/cu124
# https://download.pytorch.org/whl/torch/
#torch = { url = "https://download.pytorch.org/whl/cu124/torch-2.4.0%2Bcu124-cp310-cp310-win_amd64.whl" }
iprogress = "^0.4"
ipywidgets = "^8.1.5"
manim = "^0.18.1"


[tool.poetry.group.dev.dependencies]
tqdm = "^4.66.5"
pylint = "^3.2.6"
black = "^24.8.0"
pytest = "^8.3.2"
ipykernel = "^6.29.5"
mypy = "^1.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# [[tool.mypy.overrides]]
# module = "dlib.*"
# ignore_missing_imports = true
