[tool.poetry]
name = "megatron"
version = "0.1.0"
description = "Deep fake detector using Transformers"
authors = [
    "Jose Del Valle <josedlv936@gmail.com>",
    "Valerio Belli <valeriobelli26@gmail.com",
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
timm = "^1.0.8"
pydantic = "^2.8.2"
tqdm = "^4.66.4"
tensorboard = "^2.17.1"
torchmetrics = "^1.4.1"
# transformers = "^4.44.1"
# opencv-python = "^4.10.0.84"
# dlib = "^19.24.6"
# numpy = "1.26.0"
# matplotlib = "^3.9.2"
# torch = { url = "https://download.pytorch.org/whl/cu124/torch-2.4.0%2Bcu124-cp310-cp310-win_amd64.whl" }


[tool.poetry.group.dev.dependencies]
tqdm = "^4.66.5"
pylint = "^3.2.6"
black = "^24.8.0"
pytest = "^8.3.2"
mypy = "^1.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
